# Opticalpy

./: .gitignore  Demo.ipynb  Demo3D.ipynb  Interactive.ipynb  README.md  pyproject.toml  raytracing.py
src/opticalpy/: __init__.py  optgroup.py  optic.py  ray.py  scene.py  utils.py  visualization.py
src/opticalpy/elems/: __init__.py  beam.py  filter.py  grating.py  lens.py  material.py  mirror.py  telescope.py
src/opticalpy/op3d/: __init__.py  optic.py  ray.py  scene.py
src/opticalpy/op3d/elems/: __init__.py  beam.py  camera.py  grating.py  mirror.py
